# Gen_uz

./: .replit  DEPLOYMENT.md  DEPLOYMENT_CONFIG.md  DEPLOY_INSTRUCTIONS.md  FLY_DEPLOY_GUIDE.md  README.md  bot.py  build.sh  config.py  database.py  fly.toml  keep_alive.py  main.py  main_app.py  main_backup.py  models.py  movie_downloader.py  qarzdorlik.db  run.py  run.sh  task_management.db  test_health.py  utils.py  website_api.py
Generatoruz-1/: Dockerfile  RENDER_DEPLOY.md  REPLIT_DEPLOY.md  deploy.yaml  main_clean.py  pyproject.toml  render.yaml  replit.md  start.py  start_render.py  tasks.db
Generatoruz-1/attached_assets/: bot_1754292071736.py  main_1754292314391.py
Generatoruz-1/backups/: database_dump_20250806_1414.sql  full_database_backup_20250806_1414.db  task_management_backup_20250806_1414.db
Generatoruz-1/handlers/: admin_handlers.py  employee_handlers.py
Generatoruz-1/utils/: database.py  excel_handler.py
