[project]
name = "telegram-task-bot"
version = "1.0.0"
description = "Enhanced Telegram Task Management Bot with Website API"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pytelegrambotapi>=4.28.0",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main_app", "website_api", "main", "database", "config", "utils"]
